{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 57,
  "lineage": "ddd248f3-f21b-f3f9-f904-b964246923bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "javaspring_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:internet-gateway/igw-0edc4bef23b223af8",
            "id": "igw-0edc4bef23b223af8",
            "owner_id": "396608789548",
            "tags": {
              "Name": "javaspring-igw"
            },
            "tags_all": {
              "Name": "javaspring-igw"
            },
            "vpc_id": "vpc-0f79d6af36b12093c"
          },
          "dependencies": [
            "aws_vpc.javaspring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "javaspring_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:route-table/rtb-0f3138791b5454053",
            "id": "rtb-0f3138791b5454053",
            "owner_id": "396608789548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edc4bef23b223af8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "javaspring-route-table"
            },
            "tags_all": {
              "Name": "javaspring-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79d6af36b12093c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.javaspring_igw",
            "aws_vpc.javaspring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084f9ce3798611013",
            "route_table_id": "rtb-0f3138791b5454053",
            "subnet_id": "subnet-018b0eeae5d9f9431"
          },
          "dependencies": [
            "aws_internet_gateway.javaspring_igw",
            "aws_route_table.javaspring_route_table",
            "aws_subnet.javaspring_subnet",
            "aws_vpc.javaspring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09241a3c318a6c8c8",
            "route_table_id": "rtb-0f3138791b5454053",
            "subnet_id": "subnet-00e52093408764a40"
          },
          "dependencies": [
            "aws_internet_gateway.javaspring_igw",
            "aws_route_table.javaspring_route_table",
            "aws_subnet.javaspring_subnet",
            "aws_vpc.javaspring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "javaspring_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:security-group/sg-08fcc691f3ac6d4ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fcc691f3ac6d4ac",
            "ingress": [],
            "name": "terraform-20241221033400943000000002",
            "name_prefix": "terraform-",
            "owner_id": "396608789548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "javaspring-cluster-sg"
            },
            "tags_all": {
              "Name": "javaspring-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79d6af36b12093c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javaspring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "javaspring_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:security-group/sg-0cc7467c0f2361b5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc7467c0f2361b5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241221033400939800000001",
            "name_prefix": "terraform-",
            "owner_id": "396608789548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "javaspring-node-sg"
            },
            "tags_all": {
              "Name": "javaspring-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79d6af36b12093c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javaspring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javaspring_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:subnet/subnet-018b0eeae5d9f9431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018b0eeae5d9f9431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396608789548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "javaspring-subnet-0"
            },
            "tags_all": {
              "Name": "javaspring-subnet-0"
            },
            "vpc_id": "vpc-0f79d6af36b12093c"
          },
          "dependencies": [
            "aws_vpc.javaspring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:subnet/subnet-00e52093408764a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e52093408764a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396608789548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "javaspring-subnet-1"
            },
            "tags_all": {
              "Name": "javaspring-subnet-1"
            },
            "vpc_id": "vpc-0f79d6af36b12093c"
          },
          "dependencies": [
            "aws_vpc.javaspring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "javaspring_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396608789548:vpc/vpc-0f79d6af36b12093c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1fb6b108cd3da2b",
            "default_route_table_id": "rtb-021af34f0806b657a",
            "default_security_group_id": "sg-0bb0776ed7babcb9d",
            "dhcp_options_id": "dopt-05d4d74cffb8e4039",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f79d6af36b12093c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021af34f0806b657a",
            "owner_id": "396608789548",
            "tags": {
              "Name": "javaspring-vpc"
            },
            "tags_all": {
              "Name": "javaspring-vpc"
            }
          }
        }
      ]
    }
  ]
}